Google Maps WIP

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
   <!-- CUSTOM FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
+
+  <!-- GOOGLE MAPS -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHVWoCRR679SRdyNM0c7ADLWoNjlu600c"></script>
 </head>
 
 <body>
